# sweeptool-cli

./: Cargo.toml  README.md  build-for-tails.Dockerfile  packaging.md
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc
debian/: README.Debian  README.source  changelog  clean  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sweeptool-cli.cron.d.ex  sweeptool-cli.doc-base.ex  watch.ex
debian/source/: include-binaries
debian/upstream/: metadata.ex
docs/: MANUAL.md  packaging.md
src/: errors.rs  main.rs  ur.rs
tests/: cli.rs
