[package]
name = "sweeptool-cli"
version = "0.1.0"
authors = ["gorazdko <gorazdko@gmail.com>", "Christopher Allen <ChristopherA@LifeWithAlacrity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sweeptool"
path="src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
bdk = { version = "0.8.0", features = ["all-keys", "esplora"]}
base64 = "^0.11"
serde_json = {version="1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
# TODO pull from crates.io when available:
ur-rs = { git = "https://github.com/dspicher/ur-rs", rev = "edc32680f0f9e82705ffb8e812f91b8347d9edca" }
cbor = "0.4.1"
serde_cbor = {version="0.11.1", features = ["tags"]}
hex = "0.4"

[features]
# docker regtest and electrum server for testing purposes
nigiri = []


[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
