[package]
name = "sweeptool-cli"
description = "`Sweeptool` connects to an Electrum server hosted by Blockstream or a server of your choice (including Esplora or Electrum server via Tor onion address) and synchronizes the list of transactions received and available UTXOs. Based on this information `sweeptool` produces a PSBT which can be signed by an offline signing device or by the tool itself."
version = "0.1.0"
authors = ["gorazdko <gorazdko@gmail.com>", "Christopher Allen <ChristopherA@LifeWithAlacrity.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"
homepage = "https://github.com/BlockchainCommons/sweeptool-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sweeptool"
path="src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
bdk = { version = "0.8.0", features = ["all-keys", "esplora"]}
base64 = "^0.11"
serde_json = {version="1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
# TODO pull from crates.io when available:
ur-rs = { git = "https://github.com/dspicher/ur-rs", rev = "edc32680f0f9e82705ffb8e812f91b8347d9edca" }
cbor = "0.4.1"
serde_cbor = {version="0.11.1", features = ["tags"]}
hex = "0.4"

[features]
# docker regtest and electrum server for testing purposes
nigiri = []


[dev-dependencies]
assert_cmd = "0.10"
cargo-deb = "1.42.2"
predicates = "1"
tempfile = "3"

[package.metadata.deb]
copyright = "2020"
